cmake_minimum_required(VERSION 3.21)
project(Algo_Sem3)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Algo_Sem4 HeapSort.cpp)

add_executable(HeapSort HeapSort.cpp)
add_executable(InsertionSort InsertionSort.cpp)
add_executable(MergeSort MergeSort.cpp)
add_executable(QuickSort QuickSort.cpp)
add_executable(DepthFirstSearch DepthFirstSearch.cpp)
add_executable(BreadthFirstSearch BreadthFirstSearch.cpp)